style(reservasi): membuat halaman reservasi

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "blade-ui-kit/blade-icons": "^1.6",
+        "codeat3/blade-carbon-icons": "^2.23",
+        "codeat3/blade-iconpark": "^1.6",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9"
     },
