--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "propaganistas/laravel-phone": "^5.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.0",
         "laravel/pint": "^1.13",
