--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
         "flowbite": "^2.3.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "select2": "^4.1.0-rc.0",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "jquery": "^3.7.1"
     }
 }
