--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "itsgoingd/clockwork": "^5.2",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "propaganistas/laravel-phone": "^5.3"
+        "propaganistas/laravel-phone": "^5.3",
+        "realrashid/sweet-alert": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
