--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "sweetalert2": "^11.11.0"
     }
 }
