--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "itsgoingd/clockwork": "^5.2",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "midtrans/midtrans-php": "^2.5",
         "propaganistas/laravel-phone": "^5.3",
         "realrashid/sweet-alert": "*"
     },
