--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "realrashid/sweet-alert": "*"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.0",
         "laravel/pint": "^1.13",
